--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Sacramento ---  state University</title>
+  <title>Sacramento state University</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
